Fixed Dark Mode V2

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
-@plugin "daisyui" {
-  themes: light --default;
-}
+@plugin "daisyui";
 
 @theme {
     --color-xrb-background-1: oklch(0.1277 0.0244 29.58);
@@ -16,7 +14,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light;
+  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: rgb(227, 49, 240);
 
@@ -26,7 +24,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-color-scheme: light) {
+@media (dark) {
   :root {
     color: #213547;
     background-color: #ffffff;
